RESOLVED FIXED86726
[Chromium] Web Inspector: assertion failure when inspecting a shared worker in debug mode
https://bugs.webkit.org/show_bug.cgi?id=86726
Summary [Chromium] Web Inspector: assertion failure when inspecting a shared worker i...
Yury Semikhatsky
Reported 2012-05-17 06:50:07 PDT
ASSERTION FAILED: m_verifier.isSafeToUse() third_party/WebKit/Source/JavaScriptCore/wtf/RefCounted.h(122) : bool WTF::RefCountedBase::derefBase() 1 0x88c307b 2 0x894d4d9 ...
Attachments
Patch (1.71 KB, patch)
2012-05-17 06:55 PDT, Yury Semikhatsky
no flags
Yury Semikhatsky
Comment 1 2012-05-17 06:54:37 PDT
Yury Semikhatsky
Comment 2 2012-05-17 06:55:22 PDT
WebKit Review Bot
Comment 3 2012-05-17 08:20:23 PDT
Comment on attachment 142466 [details] Patch Clearing flags on attachment: 142466 Committed r117450: <http://trac.webkit.org/changeset/117450>
WebKit Review Bot
Comment 4 2012-05-17 08:20:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.