[Chromium] Web Inspector: assertion failure when inspecting a shared worker in debug mode https://bugs.webkit.org/show_bug.cgi?id=86726

Reviewed by Pavel Feldman.

No need to keep RefPtr to WorkerThread in a task that will be executed on
that thread, raw pointer can be used instead.

* inspector/WorkerDebuggerAgent.cpp:


Canonical link: https://commits.webkit.org/104357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117450 268f45cc-cd09-0410-ab3c-d52691b4dbfc